--- a/scss/responsive/_mobile-800.scss
+++ b/scss/responsive/_mobile-800.scss
@@ -116,6 +116,7 @@
     margin: 0 !important;
 
     .image-overlay {
+      align-items: flex-end !important;
       h1 {
         white-space: initial;
         text-align: center;
